<resources>
    <string name="app_name"> ASE LAB ASSIGNMENT 3 </string>

    <string name="label_twitter_login"> Twitter Login </string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate </string>

    <string name="label_emailpassword"> Login with Email/Password </string>
    <string name="desc_emailpassword">Use an email and password to authenticate</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="emailpassword_status_fmt">HI , %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Login using Email and Password</string>


    <string name="twitter_status_fmt">HI, %s</string>
    <string name="twitter_title_text">Twitter Login</string>



    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
</resources>
